--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
+dist: xenial
 language: python
 python:
   - "3.6"
+  - "3.7"
 
 install:
-  - pip install -r requirements.txt
-  - pip install -r requirements-test.txt
+  - pip install -r requirements.txt -r requirements-test.txt
 
 script:
-  - python3.6 setup.py develop
+  - python3 setup.py develop
   - ./pytest.sh
