--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: xenial
+dist: focal
 language: python
 python:
   - "3.6"
@@ -8,7 +8,7 @@ python:
   - "3.10"
 
 install:
-  - pip install -r requirements.txt -r requirements-dev.txt
+  - pip3 install -r requirements.txt -r requirements-dev.txt
 before_script:
   - python3 setup.py develop
 script:
