--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,10 +1,14 @@
 pytest==7.1.2; python_version >= '3.7'
 pytest==7.0.1; python_version < '3.7'
 mock==4.0.3
-coverage==6.3.2
-setuptools==62.2.0
-twine==4.0.0
+coverage==6.3.2; python_version >= '3.7'
+coverage==6.2; python_version < '3.7'
+setuptools==62.2.0; python_version >= '3.7'
+setuptools==59.6.0; python_version < '3.7'
+twine==4.0.0; python_version >= '3.7'
+twine==3.8.0; python_version < '3.7'
 wheel==0.37.1
 mkdocs==1.3.0; python_version >= '3.7'
 mkdocs-material==8.2.14; python_version >= '3.7'
-backoff==2.0.1
+backoff==2.0.1; python_version >= '3.7'
+backoff==1.11.1; python_version < '3.7'
