--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,3 +12,4 @@ mkdocs==1.4.0; python_version >= '3.7'
 mkdocs-material==8.5.6; python_version >= '3.7'
 backoff==2.0.1; python_version >= '3.7'
 backoff==1.11.1; python_version < '3.7'
+pydantic==2.3.0
