--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,15 +1,10 @@
-pytest==7.1.2; python_version >= '3.7'
-pytest==7.0.1; python_version < '3.7'
+pytest==7.1.2
 mock==4.0.3
-coverage==6.3.2; python_version >= '3.7'
-coverage==6.2; python_version < '3.7'
-setuptools==67.6.0; python_version >= '3.7'
-setuptools==59.6.0; python_version < '3.7'
-twine==4.0.0; python_version >= '3.7'
-twine==3.8.0; python_version < '3.7'
+coverage==6.3.2
+setuptools==67.6.0
+twine==4.0.0
 wheel==0.38.4
-mkdocs==1.4.0; python_version >= '3.7'
-mkdocs-material==8.5.6; python_version >= '3.7'
-backoff==2.0.1; python_version >= '3.7'
-backoff==1.11.1; python_version < '3.7'
+mkdocs==1.4.0
+mkdocs-material==8.5.6
+backoff==2.0.1
 pydantic==2.3.0
