Add coverage.xml and .coverage to gitignore

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,9 +15,10 @@ jobs:
           python-version: '3.8'
       - name: Install dependencies
         run: make setup-test-unit
-      - run: . venv/bin/activate && make test
+      - run: . venv/bin/activate && make test && python -m coverage xml
       
       - name: Upload Coverage
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./.coverage
