--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 *.pyc
 .cache
-.coverage
 .pytest_cache
 .mypy_cache/
 __pycache__
 *.egg-info
 build/
 dist/
+.coverage
+coverage.xml
 /venv
 
 .idea
