--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,7 +31,7 @@ markdown_extensions:
   - pymdownx.superfences
 
 nav:
-  - Home: README.md
+  - Introduction: README.md
   - Demo: demo.md
   - CLI:
     - Quick start: quick-start.md
