--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,4 @@
-pytest==7.1.2
+pytest==8.2.2
 mock==4.0.3
 coverage==6.3.2
 setuptools==67.6.0
@@ -8,3 +8,4 @@ mkdocs==1.4.0
 mkdocs-material==8.5.6
 backoff==2.0.1
 pydantic==2.4.0
+mypy==1.10.1
