--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -9,14 +9,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
       - name: Install documentation tools
-        run: pip install -r requirements-dev.txt
+        run: uv venv venv && . venv/bin/activate && uv pip install -e ".[dev]"
 
       - name: Deploy mkdocs to Github Pages
-        run: mkdocs gh-deploy --force
+        run: . venv/bin/activate && mkdocs gh-deploy --force
