--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
+    "build==1.0.0",
     "pytest==8.2.2",
     "mock==4.0.3",
     "coverage==6.3.2",
