--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dev = [
     "build==1.0.0",
     "pytest==8.2.2",
     "mock==4.0.3",
-    "coverage==6.3.2",
+    "coverage[toml]==6.3.2",
     "setuptools==70.0.0",
     "twine==4.0.0",
     "wheel==0.38.4",
