Exclude venv from package distrivution

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 recursive-exclude tests *
 recursive-exclude .github *
 recursive-exclude docs *
+recursive-exclude venv *
 exclude .readthedocs.yml
 exclude mkdocs.yml
 exclude nuclear.egg-info
